syntax = "proto3";

package retrom;

import "google/protobuf/timestamp.proto";

message Platform {
  int32 id = 1;
  string path = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
  google.protobuf.Timestamp deleted_at = 5;
  bool is_deleted = 6;
  bool third_party = 7;
}

message NewPlatform {
  string path = 1;
  optional google.protobuf.Timestamp created_at = 2;
  optional google.protobuf.Timestamp updated_at = 3;
  optional google.protobuf.Timestamp deleted_at = 4;
  bool is_deleted = 5;
  bool third_party = 6;
}

message UpdatedPlatform {
  int32 id = 1;
  optional string path = 2;
  optional google.protobuf.Timestamp created_at = 3;
  optional google.protobuf.Timestamp updated_at = 4;
  optional google.protobuf.Timestamp deleted_at = 5;
  optional bool is_deleted = 6;
  optional bool third_party = 7;
}
